# advanced_cpp

./: .gitignore
homework_1/task_1/: main.cpp
homework_1/task_2/: CMakeLists.txt  main.cpp
homework_2/task_1/: main.cpp
homework_2/task_2/: CMakeLists.txt  main.cpp
homework_3/task_1/: CMakeLists.txt  main.cpp
homework_3/task_2/: main.cpp
homework_4/task_1/: CMakeLists.txt  main.cpp
homework_4/task_2/: CMakeLists.txt  main.cpp
